# Breidablik

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  grid_snapshot.txt  install  install_auto  install_man  install_pip  install_uv  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
ML/: format_read.py  interpolate.py  test_interpolate.py
analysis/: __init__.py  test_read.py  test_tools.py
breidablik/: __init__.py  grid_snapshot.py  grid_snapshot.txt  grid_snapshot_marcs.txt
breidablik/ML/: __init__.py  interpolate.py
breidablik/analysis/: __init__.py  format_read.py  read.py  test_read.py  test_tools.py  tools.py
breidablik/interpolate/: __init__.py  grid_check.py  load.py  nlte.py  rew.py  scalar.py  spectra.py  test_grid_check.py  test_nlte.py  test_rew.py  test_scalar.py  test_spectra.py
docs/: About.rst  Documentation.rst  Getting Started.rst  conf.py  index.rst  requirements.txt
docs/documentation/: analysis.rst  interpolate.rst
docs/examples/: ex1.rst  ex2.rst  ex3.rst  ex4.rst  ex5.rst
