[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "breidablik"
version = "1.3.0"
authors = [
  { name="Ella Xi Wang", email="xi.wang3@anu.edu.au" },
]
description = "Interpolate lithium spectra and predict lithium abundance for most main sequence stars"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
