[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breidablik"
version = "1.4.0"

authors = [
  { name="Ella Xi Wang", email="xi.wang3@anu.edu.au" },
]
description = "Interpolate lithium spectra and predict lithium abundance for most main sequence stars"
readme = "README.md"
keywords = ["lithium", "stellar", "spectroscopy"]

requires-python = ">=3.7"
dependencies = [
  "hypothesis >= 4.17",
  "numpy >= 1.15",
  "scipy >= 1.3",
  "pytest >= 3.5",
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["breidablik"]

[project.urls]
Homepage = "https://github.com/ellawang44/Breidablik"
Documentation = "https://breidablik.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ellawang44/Breidablik.git"
Issues = "https://github.com/ellawang44/Breidablik/issues"